--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -1,5 +1,5 @@
 authors:
   silentglasses:
-    name: SIlentGlasses
+    name: SilentGlasses
     description: Creator
     avatar: https://github.com/silentglasses.png
