--- a/requirements.txt
+++ b/requirements.txt
@@ -5,27 +5,28 @@ click==8.1.7
 colorama==0.4.6
 ghp-import==2.1.0
 gitdb==4.0.11
-GitPython==3.1.42
-idna==3.6
+GitPython==3.1.43
+idna==3.7
 Jinja2==3.1.3
-Markdown==3.5.2
+Markdown==3.6
 markdown-include==0.8.1
 MarkupSafe==2.1.5
 mergedeep==1.3.4
 mkdocs==1.5.3
 mkdocs-ezlinks-plugin==0.1.14
-mkdocs-git-authors-plugin==0.7.2
+mkdocs-git-authors-plugin==0.8.0
 mkdocs-git-revision-date-localized-plugin==1.2.4
-mkdocs-material==9.5.11
+mkdocs-glightbox==0.3.7
+mkdocs-material==9.5.17
 mkdocs-material-extensions==1.3.1
-packaging==23.2
+packaging==24.0
 paginate==0.5.6
 pathspec==0.12.1
 platformdirs==4.2.0
 Pygments==2.17.2
 pygtrie==2.5.0
-pymdown-extensions==10.7
-python-dateutil==2.8.2
+pymdown-extensions==10.7.1
+python-dateutil==2.9.0.post0
 pytz==2024.1
 PyYAML==6.0.1
 pyyaml_env_tag==0.1
