--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,8 @@
+# MacStart Deploy
 name: ci
 on:
   push:
     branches:
-      - master
       - main
 permissions:
   contents: write
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
+          fetch-depth: 0
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
       - uses: actions/cache@v4
         with:
