make changes to directory structure
This change creates a new structure for setup documentation.
This will allow us to write more how to setup xyz while keeping
the actual learning things in their own areas.
There is also a small change the the workflow setup.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,8 +18,9 @@ nav:
     - Filesystem Navigation: 'onboarding/filesystem_navigation.md'
   - Baseline:
     - 'baseline/index.md'
-    - SSH: 'baseline/ssh.md'
-    - Python: 'baseline/python.md'
+    - Setup:
+        - SSH: 'setup/ssh.md'
+        - Python: 'setup/python.md'
     - Version Control:
       - Git Intro: 'baseline/git/vc_git.md'
       - Git Concepts: 'baseline/git/git-core-concepts.md'
